k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stream-wars
  labels:
    app: stream-wars
    environment: production
