k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: stream-wars-app
  namespace: stream-wars
  labels:
    app: stream-wars
    component: app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: stream-wars
