k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stream-wars
  namespace: stream-wars
  labels:
    app: stream-wars
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: websocket
    port: 3001
    targetPort: websocket
    protocol: TCP
  selector:
    app: stream-wars
